--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -26,3 +26,11 @@ build:
             manual:
                 - src: '**/*.js'
                   dest: .
+        - image: us.gcr.io/gittix-dev-285421/tickets
+          context: tickets
+          docker: 
+            dockerfile: dockerfile
+          sync:
+            manual:
+                - src: 'src/**/*.ts'
+                  dest: .
