--- a/infra/k8s/nats-depl.yaml
+++ b/infra/k8s/nats-depl.yaml
@@ -29,13 +29,13 @@ spec:
                       '2',
                       '-SD',
                       '-cid',
-                      'ticket'
+                      'ticketing',
                   ]
 ---
     apiVersion: v1
     kind: Service
     metadata:
-        name: nats-service
+        name: nats-srv
     spec:
         selector:
             app: nats
