--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -18,7 +18,11 @@ spec:
                   backend:
                     serviceName: tickets-srv
                     servicePort: 3000
-                - path: /?(.*)
+                - path: /api/orders/?(.*)
+                  backend:
+                    serviceName: orders-srv
+                    servicePort: 3000
+                - path: /?(.*) # catchall
                   backend:
                     serviceName: client-srv
                     servicePort: 3000
