--- a/expiration/package.json
+++ b/expiration/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tickets",
+  "name": "expiration",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,28 +18,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@goosenest/common": "^1.0.13",
-    "@types/cookie-session": "^2.0.41",
-    "@types/express": "^4.17.7",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.7.34",
-    "cookie-session": "^1.4.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "express-validator": "^6.6.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.27",
-    "mongoose-update-if-current": "^1.4.0",
+    "@goosenest/common": "^1.0.14",
+    "@types/bull": "^3.14.0",
+    "bull": "^3.18.0",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
     "@types/jest": "^26.0.9",
-    "@types/supertest": "^2.0.10",
     "jest": "^26.2.2",
-    "mongodb-memory-server": "^6.6.3",
-    "supertest": "^4.0.2",
     "ts-jest": "^26.1.4"
   }
 }
