--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -50,3 +50,11 @@ build:
             manual:
               - src: 'src/**/*.ts'
                 dest: .
+        - image: us.gcr.io/gittix-dev-285421/payments
+          context: payments
+          docker: 
+            dockerfile: Dockerfile
+          sync:
+            manual:
+              - src: 'src/**/*.ts'
+                dest: .
