--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -26,7 +26,7 @@ spec:
                   backend:
                     serviceName: orders-srv
                     servicePort: 3000
-                - path: /?(.*) # catchall
+                - path: /?(.*) 
                   backend:
                     serviceName: client-srv
                     servicePort: 3000
