--- a/infra/k8s/gcp-depls/auth-depl.yaml
+++ b/infra/k8s/gcp-depls/auth-depl.yaml
@@ -14,7 +14,7 @@ spec:
         spec:
             containers:
                 - name: auth
-                  image: angrygoose/auth
+                  image: us.gcr.io/gittix-dev-285421/auth
                   env:
                     - name: MONGO_URI
                       value: 'mongodb://auth-mongo-srv:27017/auth'
