--- a/infra/k8s/gcp-depls/client-depl.yaml
+++ b/infra/k8s/gcp-depls/client-depl.yaml
@@ -14,7 +14,7 @@ spec:
         spec:
             containers:
                 - name: client
-                  image: angrygoose/client
+                  image: us.gcr.io/gittix-dev-285421/client
 ---
 apiVersion: v1
 kind: Service
