--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -14,7 +14,7 @@ spec:
         spec:
             containers:
                 - name: tickets
-                  image: us.gcr.io/gittix-dev-285421/tickets
+                  image: angrygoose/tickets
                   env:
                     - name: NATS_CLIENT_ID
                       valueFrom:
