--- a/infra/k8s-digitalocrean/payments-depl.yaml
+++ b/infra/k8s-digitalocrean/payments-depl.yaml
@@ -14,7 +14,7 @@ spec:
         spec:
             containers:
                 - name: payments
-                  image: us.gcr.io/gittix-dev-285421/payments
+                  image: angrygoose/payments
                   env:
                     - name: NATS_CLIENT_ID
                       valueFrom:
